--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 	  <a-box color="tomato" depth="2" height="4" width="0.5"></a-box>
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
-    <a-entity camera></a-entity>
+    <!--<a-entity camera></a-entity>-->
+    <a-camera></a-camera>
   </a-scene>
 </body>
